[gd_scene load_steps=16 format=3 uid="uid://drqf7jcr25yqx"]

[ext_resource type="Texture2D" uid="uid://duhc2pe86grb5" path="res://assets/ui/Dialogue Box Blank.png" id="2_xyutd"]
[ext_resource type="Script" path="res://tools/dialogue/vn_dialogue.gd" id="4_g1vbp"]
[ext_resource type="Texture2D" uid="uid://b5vxsdpo2j5aq" path="res://assets/choice_overlay.png" id="4_qy07p"]
[ext_resource type="Texture2D" uid="uid://7bl0mmfp1em5" path="res://assets/choice_graphic.png" id="5_5uo5q"]
[ext_resource type="FontFile" uid="uid://5dv6lpvm4hm6" path="res://assets/ui/Galdeano-Regular.ttf" id="5_bpopc"]
[ext_resource type="Texture2D" uid="uid://bqicj2kxtgfbh" path="res://assets/choice1_normal.png" id="6_2qkhs"]
[ext_resource type="Texture2D" uid="uid://clrhkl8qgm4qw" path="res://assets/ui/Next Icon_Default.png" id="6_6annc"]
[ext_resource type="Texture2D" uid="uid://c5nvhsfmkfp6d" path="res://assets/choice1_focus.png" id="7_krc5t"]
[ext_resource type="BitMap" uid="uid://bug5jjtm6s26s" path="res://assets/bitmap_1.bmp" id="8_u4s80"]
[ext_resource type="Texture2D" uid="uid://cpprxig8dgffn" path="res://assets/choice2_normal.png" id="9_qud2k"]
[ext_resource type="Texture2D" uid="uid://c445ypl3cb421" path="res://assets/choice2_focus.png" id="10_sxedr"]
[ext_resource type="BitMap" uid="uid://drfv01w7j2n32" path="res://assets/bitmap_2.bmp" id="11_u6puy"]
[ext_resource type="Texture2D" uid="uid://bpq6o7jyebeo6" path="res://assets/choice3_normal.png" id="12_gi5os"]
[ext_resource type="Texture2D" uid="uid://c36wt2xdvv4ws" path="res://assets/choice3_focus.png" id="13_fbc4b"]
[ext_resource type="BitMap" uid="uid://dlkha7dvelgxr" path="res://assets/bitmap_3.bmp" id="14_oq22a"]

[node name="VN_Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_g1vbp")
text = "res://tools/dialogue/ft_scripts/Dialogue - Prototype.json"

[node name="Sprite" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Box" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 104.5
offset_top = 611.0
offset_right = 1815.5
offset_bottom = 1024.0
texture = ExtResource("2_xyutd")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 782.0
offset_right = 1600.0
offset_bottom = 974.0
theme_override_colors/font_color = Color(0.32549, 0.262745, 0.101961, 1)
theme_override_fonts/font = ExtResource("5_bpopc")
theme_override_font_sizes/font_size = 32
text = "Hey, you! Peasant! Fetch me my towel, please."
autowrap_mode = 3
visible_characters_behavior = 1

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 652.0
offset_right = 637.0
offset_bottom = 704.0
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_fonts/font = ExtResource("5_bpopc")
theme_override_font_sizes/font_size = 48
text = "Rose Violet"
horizontal_alignment = 1
autowrap_mode = 3
visible_characters_behavior = 1

[node name="Remember" type="Label" parent="."]
layout_mode = 0
offset_left = 1152.0
offset_top = 640.0
offset_right = 1760.0
offset_bottom = 685.0
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_fonts/font = ExtResource("5_bpopc")
theme_override_font_sizes/font_size = 32
text = "Character will remember that."
horizontal_alignment = 2
autowrap_mode = 2

[node name="Next" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.54902)
layout_mode = 0
offset_left = 1663.0
offset_top = 910.0
offset_right = 1703.0
offset_bottom = 954.0
disabled = true
texture_normal = ExtResource("6_6annc")
texture_pressed = ExtResource("6_6annc")
texture_hover = ExtResource("6_6annc")
texture_disabled = ExtResource("6_6annc")
texture_focused = ExtResource("6_6annc")

[node name="Choice" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1088.0

[node name="Backdrop" type="TextureRect" parent="Choice"]
modulate = Color(1, 1, 1, 0.454902)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_qy07p")

[node name="Graphic" type="TextureRect" parent="Choice"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
texture = ExtResource("5_5uo5q")

[node name="Options" type="Control" parent="Choice"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OptionOne" type="TextureButton" parent="Choice/Options"]
layout_mode = 0
offset_left = 576.0
offset_top = 64.0
offset_right = 1158.0
offset_bottom = 538.0
texture_normal = ExtResource("6_2qkhs")
texture_hover = ExtResource("7_krc5t")
texture_click_mask = ExtResource("8_u4s80")

[node name="OptionTwo" type="TextureButton" parent="Choice/Options"]
layout_mode = 0
offset_left = 352.0
offset_top = 320.0
offset_right = 1161.0
offset_bottom = 676.0
texture_normal = ExtResource("9_qud2k")
texture_hover = ExtResource("10_sxedr")
texture_click_mask = ExtResource("11_u6puy")

[node name="OptionThree" type="TextureButton" parent="Choice/Options"]
layout_mode = 0
offset_left = 544.0
offset_top = 640.0
offset_right = 1159.0
offset_bottom = 948.0
mouse_filter = 1
texture_normal = ExtResource("12_gi5os")
texture_hover = ExtResource("13_fbc4b")
texture_click_mask = ExtResource("14_oq22a")

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="mouse_entered" from="Choice/Options/OptionOne" to="." method="_on_option_one_mouse_entered"]
[connection signal="mouse_exited" from="Choice/Options/OptionOne" to="." method="_on_option_one_mouse_exited"]
[connection signal="pressed" from="Choice/Options/OptionOne" to="." method="_on_option_one_pressed"]
[connection signal="mouse_entered" from="Choice/Options/OptionTwo" to="." method="_on_option_two_mouse_entered"]
[connection signal="mouse_exited" from="Choice/Options/OptionTwo" to="." method="_on_option_two_mouse_exited"]
[connection signal="pressed" from="Choice/Options/OptionTwo" to="." method="_on_option_two_pressed"]
[connection signal="mouse_entered" from="Choice/Options/OptionThree" to="." method="_on_option_three_mouse_entered"]
[connection signal="mouse_exited" from="Choice/Options/OptionThree" to="." method="_on_option_three_mouse_exited"]
[connection signal="pressed" from="Choice/Options/OptionThree" to="." method="_on_option_three_pressed"]
